--- a/main.css
+++ b/main.css
@@ -227,7 +227,7 @@ border: none;
 outline: none;
 position: relative;
 }
-.numbers {
+.numbers, .numbers1 {
 background-color: rgba(200, 0, 200, 1);
 color: rgba(255, 255, 255, 1);
 padding: 4px;
@@ -238,13 +238,13 @@ border: none;
 outline: none;
 cursor: pointer;
 }
-.numbers:hover {
+.numbers:hover, .numbers1:hover {
 	color: rgba(255,255,60,1);
 	background-color: rgba(200, 100, 50, 1);
 }
-.greennum {
-background-color: rgba(0,200, 50, 1);
-color: rgba(255, 255, 255, 1);
+.issues, .issues1 {
+background-color: rgba(100,0, 200, 1);
+color: black;
 padding: 4px;
 line-height: 0.6em;
 font-weight: 400;
@@ -253,9 +253,21 @@ border: none;
 outline: none;
 cursor: pointer;
 }
-.greennum:hover {
+.issues:hover, .issues1:hover {
 	color: rgba(255,255,60,1);
 	background-color: rgba(0, 100, 150, 1);
+}
+.img-set {
+	background-color: yellow;
+	color: rgba(0, 0, 0, 1);
+	border-radius: 5px;
+	padding: 6px;
+	margin: 0 5px;
+	line-height: 0.7em;
+	font-weight: 600;
+	border: none;
+	outline: none;
+	cursor: pointer;
 }
 .download {
 	color: yellow;
@@ -272,8 +284,14 @@ cursor: pointer;
 	top: 0;
 	left: 0;
 }
+/* So spans display instead of the tooltip css being invoked*/
+.pix-alt {
+	position: relative;
+	top: 0;
+	left: 0;
+}
 /*=============================================================================================================
-		 													ELEMENT ATTRIBUTES
+		 													DIV ATTRIBUTES
 ===============================================================================================================*/
 .darkYellow {
 	background-color: rgba(50, 50, 0, 0.7);
@@ -329,64 +347,72 @@ cursor: pointer;
 .floatR {
 	float: right;
 }
-h3 {
-	border-radius: 30px;
-	background-color: rgba(1, 1, 1, 0.6);
-	color: rgba(255, 255, 255, 1);
-	font-weight: 400;
-	line-height: 1.2em;
-	padding: 5px 25px;
-	text-align: center;
-	margin: 0.5em 0;
-}
-h2 {
-	border-radius: 30px;
-	background-color: rgba(1, 1, 1, 0.6);
-	color: rgba(255, 255, 255, 1);
-	font-weight: 200;
-	font-size: 1.5em;
-	line-height: 0.9em;
-	text-align: center;
-	margin: 0.5em 0;	
-}
-h1 {
-	border-radius: 30px;
-	background-color: rgba(1, 1, 1, 0.6);
-	color: rgba(255, 255, 255, 1);
-	font-weight: 200;
-	font-size: 2em;
-	line-height: 1em;
-	text-align: center;
-	margin: 0.5em 0;
-}
-p {
-	padding: 5px 15px;
-}
-p.intro {
-	border-radius: 30px;
-	background-color: rgba(1, 1, 1, 0.6);
-	color: rgba(255, 255, 255, 1);
-	font-weight: 300;
-	line-height: 1.3em;
-	text-align: center;	
-	padding: 10px 10px 10px 15px;
-}
-p.click {
-	padding: 0;
-	font-weight: 300;
-	line-height: 1.3em;
-}
-.label {
-	border-radius: 20px;
-	background-color: rgba(0, 0, 0, 0.6);
-	color: rgba(255, 255, 0, 1);
-	text-align: center;
-	padding: 10px;
-	border: none;
-	outline: none;
-	margin: 5px 0;
-}
-
+/*=============================================================================================================
+		 													ELEMENT ATTRIBUTES
+===============================================================================================================*/
+		h3 {
+			border-radius: 30px;
+			background-color: rgba(1, 1, 1, 0.6);
+			color: rgba(255, 255, 255, 1);
+			font-weight: 400;
+			line-height: 1.2em;
+			padding: 5px 25px;
+			text-align: center;
+			margin: 0.5em 0;
+		}
+		h2 {
+			border-radius: 30px;
+			background-color: rgba(1, 1, 1, 0.6);
+			color: rgba(255, 255, 255, 1);
+			font-weight: 200;
+			font-size: 1.5em;
+			line-height: 0.9em;
+			text-align: center;
+			margin: 0.5em 0;	
+		}
+		h1 {
+			border-radius: 30px;
+			background-color: rgba(1, 1, 1, 0.6);
+			color: rgba(255, 255, 255, 1);
+			font-weight: 200;
+			font-size: 2em;
+			line-height: 1em;
+			text-align: center;
+			margin: 0.5em 0;
+		}
+		p {
+			padding: 5px 15px;
+		}
+		p.intro {
+			border-radius: 30px;
+			background-color: rgba(1, 1, 1, 0.6);
+			color: rgba(255, 255, 255, 1);
+			font-weight: 300;
+			line-height: 1.3em;
+			text-align: center;	
+			padding: 10px 10px 10px 15px;
+		}
+		p.click {
+			padding: 0;
+			font-weight: 300;
+			line-height: 1.3em;
+		}
+		.label {
+			border-radius: 20px;
+			background-color: rgba(0, 0, 0, 0.6);
+			color: rgba(255, 255, 0, 1);
+			text-align: center;
+			padding: 10px;
+			border: none;
+			outline: none;
+			margin: 5px 0;
+		}
+		p.imgset {
+			display: inline;
+			font-size: 1.3em;
+			font-weight: 300;
+		}
+/*-----------------------------------------------------------------------------------------------------------------------*/
 table {
 	border-radius: 20px;
 	color: rgba(255, 255, 255, 1);
@@ -458,30 +484,31 @@ table ul {
 table ul li {
 	margin: 5px;
 }
-a {
-	text-decoration: none;
-	color: rgba(255, 200, 0, 1);
-}
-
-a:hover {
-	color: rgba(255,255,60,1);
-	background-color: rgba(50, 50, 0, 1)
-}
-.neutral {
-	color: inherit;
-	background-color: none;
-}
-img {
- 	padding: 10px;
- 	width: 100%;
-}
-.tooltip-img {
-	width: auto;
-	float: right;
-}
-.realsize {
-	width: auto;
-}
+/*=========================================================================================================*/
+		a {
+			text-decoration: none;
+			color: rgba(255, 200, 0, 1);
+		}
+		
+		a:hover {
+			color: rgba(255,255,60,1);
+			background-color: rgba(50, 50, 0, 1)
+		}
+		.neutral {
+			color: inherit;
+			background-color: none;
+		}
+		img {
+		 	padding: 10px;
+		 	width: 100%;
+		}
+		.tooltip-img {
+			width: auto;
+			float: right;
+		}
+		.realsize {
+			width: auto;
+		}
 /*==============================================================================
 								NAV
 ================================================================================*/
