Layout for non-column sections
Floating class, padding class

Former-commit-id: b94fe5576b9bd7457f135f456ca6bcf0bf7c5ff5 [formerly 54b33c96a276854ee7deb23f8ce3d6508d9f4b74]
Former-commit-id: 483774e710057ff276e66adae1d62f68ce64ce41

--- a/main.css
+++ b/main.css
@@ -222,6 +222,7 @@ margin: 0;
 	width: 100%;
 	clear: both;
 }
+/*--------------------------------------------------------------------------------------------------------*/
 button {
 border: none;
 outline: none;
@@ -319,6 +320,9 @@ cursor: pointer;
 	text-align: left;
 	vertical-align: top;
 }
+.pad15 {
+	padding: 15px;
+}
 .roundLeft {
 	border-radius: 20px 0 0 20px;
 }
@@ -343,9 +347,11 @@ cursor: pointer;
 }
 .floatL {
 	float: left;
+	display: inline-block;
 }
 .floatR {
 	float: right;
+	display: inline-block;
 }
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
