--- a/main.css
+++ b/main.css
@@ -353,6 +353,10 @@ cursor: pointer;
 	float: right;
 	display: inline-block;
 }
+.noFloat {
+	display: block;
+	float: none;
+}
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
 ===============================================================================================================*/
