Refine layout tools
Added h4 to the h3 style to get around the float rules added to all div and h1, h2, h3 in .rowL and .rowR divs. Removed outdated classes.

Former-commit-id: e2a35c4f6a5482157f7e278db1a2a5d8cd44405c [formerly ca68bfb9e0753d114cfa01b42679a89c65761439]
Former-commit-id: 756961a6c9b07db7261c5d92b9a03e148cfe6f00

--- a/main.css
+++ b/main.css
@@ -345,14 +345,6 @@ cursor: pointer;
 	text-align: center;
 	font-weight: 600;
 }
-.floatL {
-	float: left;
-	display: inline-block;
-}
-.floatR {
-	float: right;
-	display: inline-block;
-}
 .noFloat {
 	display: block;
 	float: none;
@@ -360,7 +352,7 @@ cursor: pointer;
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
 ===============================================================================================================*/
-		h3 {
+		h3, h4 {
 			border-radius: 30px;
 			background-color: rgba(1, 1, 1, 0.6);
 			color: rgba(255, 255, 255, 1);
