Improve noFloat class
Set up noFloat to not be overridden by .rowL and .rowR rules, put position rules on it to allow absolute positioning inside it.

Former-commit-id: c20608de3207dd668e8633fe4e91929d040cc476 [formerly 97de1dab9a3109a26d1eb9c13bae80c98f1371d8]
Former-commit-id: 259bd966c0a2eab9281e7571a33304f101f43815

--- a/main.css
+++ b/main.css
@@ -347,7 +347,10 @@ cursor: pointer;
 }
 .noFloat {
 	display: block;
-	float: none;
+	float: none !important;
+	position: relative;
+	top: 0;
+	left: 0;
 }
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
