--- a/css/cssportal.tooltip.css
+++ b/css/cssportal.tooltip.css
@@ -5,7 +5,6 @@ div.pix span {
   position: absolute;
   width: 0px;
   color: #FFFFFF;
-  background: #000000;
   height: auto;
   line-height: 1.2em;
   text-align: left;
@@ -17,7 +16,7 @@ div.pix span {
 .tooltipMR:hover span, .tooltipB:hover span, .tooltipBML:hover span, .tooltipBL:hover span, 
 .tooltipBBL:hover span, .tooltipBMR:hover span, .tooltipBR:hover span, .tooltipBBR:hover span {
   visibility: visible;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(30, 0,30, 1);
   padding: 8px;
   z-index: 10;
   width: 400px;
