--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,7 @@ textarea {
     .col-9r12 {width: 75%; margin-left: 25%;}
     .col-10 {width: 83.33%;}
     .col-10r12 {width: 83.33%; margin-left: 16.66%;}
+    .col-10c12 {width: 83.33%; margin-left: 8.33%; margin-right: 8.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
 }
@@ -232,6 +233,10 @@ br.clearboth {
 	position: relative;
 	top: 0;
 	left: 0;
+}
+.centerit {
+	width: 50%;
+	margin: 0 auto;
 }
 #container {
 	margin-top: 160px;
