--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,13 @@ cursor: pointer;
 	vertical-align: top;
 	padding: 15px;
 }
+.blackwide {
+	background-color: rgba(0, 0, 0, 0.7);
+	color: rgba(255, 255, 255, 1);
+	text-align: left;
+	vertical-align: top;
+	padding: 15px 20px 15px 30px;
+}
 .black30 {
 	background-color: rgba(0, 0, 0, 0.3);
 	color: rgba(255, 255, 255, 1);
