--- a/css/mainNotes.css
+++ b/css/mainNotes.css
@@ -64,8 +64,14 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*All the classes below with 'col' in the name are for responsive layout by doing 
-everything with columns*/
+/*------------------------------------------------------------------------------------
+All the classes below with 'col' in the name are for responsive layout by doing 
+everything with columns. The @media queries determine which col class is applied by 
+detecting the width of the browser window. Each div used for setting up the column 
+width thus needs two col classes, one for if the browser is less than 850px, and 
+one for if it is more. If it is less than 500px there are no columns and everything 
+stacks.
+-------------------------------------------------------------------------------------*/
 [class*="col-"] {
 	padding: 15px;
 	width: 100%;
@@ -135,6 +141,12 @@ everything with columns*/
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
 }
+/*---------------------------------------------------------------------------------------
+The rest of the @media queries are to position the background image and reduce 
+font-size and the width of the pop-up tooltips when the browser is too small to display 
+them well. In the case of the tooltips, some had to be repositioned as well so they 
+wouldn't run off the screen
+----------------------------------------------------------------------------------- */
 @media only screen and (min-width:1000px) {
 	html {
 	background: #000 url(http://www.moonwards.com/img/tycho7color.png) no-repeat fixed 0 0;
@@ -203,6 +215,10 @@ header {
 /*============================================================================================================
 																LAYOUT TOOLS
 =============================================================================================================*/
+/*----------------------------------------
+The first item is helpful to the layout because it means that the width of block-level items 
+is determined by subtracting pixels from their width for padding and borders, instead of adding it
+----------------------------------------------*/
 * {
 box-sizing: border-box;
 padding: 0;
@@ -215,6 +231,13 @@ margin: 0;
 .rowL div, .rowL h1, .rowL h2, .rowL h3, .floatL {
 	float: left;
 }
+/*---------------------------------------------------------------------------------------------
+The :after classes and the clearboth br are to prevent wrapping. The clearboth br was 
+necessary in order to put <p> elements with the iframes, instead of all the <p>'s being 
+pushed to the top of the div. I can't remember why i created noFloat but it was a 
+similar issue, having to do with getting the minimap on the Suborbital Hop calculator 
+working.
+--------------------------------------------------------------------------------------*/
 .rowL:after, .rowR:after {
 	content: "";
 	clear: both;
@@ -231,16 +254,11 @@ br.clearboth {
 	top: 0;
 	left: 0;
 }
-.centerit {
-	width: 50%;
-	margin: 0 auto;
-}
 #container {
 	margin-top: 160px;
 	width: 100%;
 	clear: both;
 }
-/*--------------------------------------------------------------------------------------------------------*/
 button {
 border: none;
 outline: none;
@@ -296,13 +314,23 @@ cursor: pointer;
 	color: rgba(255,255,60,1);
 	background-color: rgba(50, 50, 0, 1)
 }
-
+/*--------------------------------------------------
+pix is so that buttons can be placed on top of divs with this 
+class and positioned. Spans within elements with a class of pix are 
+used to create the tooltips on the buttons. That's how 
+the images get their numbered markers with the pop-up text.
+Most of the css for this is in the cssportal.tooltip.css doc.
+--------------------------------------------------------*/
 .pix {
 	position: relative;
 	top: 0;
 	left: 0;
 }
-/* So spans display instead of the tooltip css being invoked*/
+/* pix-alt is so spans display instead of the tooltip css being invoked, for 
+instance in paragraphs under an image in a div with class pix. 
+Maybe there was a more efficient way to do this, but i didn't 
+see the potential for the issue until i'd already used 
+pix all over the place.*/
 .pix-alt {
 	position: relative;
 	top: 0;
@@ -324,6 +352,12 @@ cursor: pointer;
 	vertical-align: top;
 	padding: 15px;
 }
+/*----------------------------------------------------------------------------------------------
+blackwide is for elements going across the full width of the browser window. All the rest 
+are for the various layout styles, they were tacked on as things came up and aren't 
+really consistent or clear. Not sure if they could be improved much and it probably isn't 
+the time...
+---------------------------------------------------------------------------------------*/
 .blackwide {
 	background-color: rgba(0, 0, 0, 0.7);
 	color: rgba(255, 255, 255, 1);
@@ -442,7 +476,10 @@ cursor: pointer;
 			font-size: 1.3em;
 			font-weight: 300;
 		}
-/*-----------------------------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------
+Tables were used in an earlier version of the site, and i've left this section in 
+case it comes up again
+--------------------------------------------------------------*/
 table {
 	border-radius: 20px;
 	color: rgba(255, 255, 255, 1);
@@ -524,6 +561,9 @@ table ul li {
 			color: rgba(255,255,60,1);
 			background-color: rgba(50, 50, 0, 1)
 		}
+	/*----------------
+	Neutral is so i can slip in an invisible link
+	--------------*/
 		.neutral {
 			color: inherit;
 			background-color: none;
@@ -541,6 +581,7 @@ table ul li {
 		}
 /*==============================================================================
 								NAV
+
 ================================================================================*/
 nav {
 	position: fixed;
@@ -567,11 +608,19 @@ nav ul:first-child {
 	cursor: pointer;
 	white-space: nowrap;
 }
+/*--------------------------------------------------------------
+This next thing is so the menu items display in a line even though 
+they are list items
+-----------------------------------------------------------------*/
 nav ul:first-child li {
   display: inline;
   position: relative;
   padding: 6px;
 }
+/*---------------------------------------------------------------------------
+The things below are so the menu items of different sections only appear when the 
+section item is hovered over, and do so in the right place.
+----------------------------------------------------------------------*/
 nav ul ul{
   display: none;
 }
