--- a/css/main.css
+++ b/css/main.css
@@ -413,13 +413,12 @@ cursor: pointer;
 		p {
 			padding: 5px 15px;
 		}
-		p.intro {
+		.intro {
 			border-radius: 30px;
 			background-color: rgba(1, 1, 1, 0.7);
 			color: rgba(255, 255, 255, 1);
 			font-weight: 300;
-			line-height: 1.3em;
-			text-align: center;	
+			line-height: 1.3em;	
 			padding: 10px 10px 10px 15px;
 		}
 		p.click {
