--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ cursor: pointer;
 	}
 .centertext {
 	text-align: center;
-}
+}			line-height: 1.2em;
 	
 .pad15 {
 	padding: 15px;
@@ -361,7 +361,7 @@ cursor: pointer;
 	border-radius: 20px;
 }
 .roundAll img, .roundAll p, .roundAll object {
-	margin: 10px;
+	padding: 10px;
 }
 .yellow {
 	color: yellow;
@@ -379,35 +379,47 @@ cursor: pointer;
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
 ===============================================================================================================*/
-		h3, h4 {
-			border-radius: 30px;
+	h1, h2, h3, h4{
 			background-color: rgba(1, 1, 1, 0.7);
 			color: rgba(255, 255, 255, 1);
-			font-weight: 400;
-			line-height: 1.2em;
 			padding: 5px 25px;
 			text-align: center;
 			margin: 0.5em 0;
 		}
-		h2 {
-			border-radius: 30px;
-			background-color: rgba(1, 1, 1, 0.7);
-			color: rgba(255, 255, 255, 1);
+		h3, h4 {
+			font-weight: 300;
+			line-height: 1.2em;
+		}
+		h1, h2 {
 			font-weight: 200;
-			font-size: 1.5em;
+
+		}
+		h1, h2, h3{
+			border-radius: 30px;	
+		}
+		h4{
+			border-radius: 30px 0 0 30px;
+		}
+		h2 {
 			line-height: 0.9em;
-			text-align: center;
-			margin: 0.5em 0;	
+			font-size: 1.5em;
 		}
 		h1 {
-			border-radius: 30px;
-			background-color: rgba(1, 1, 1, 0.7);
-			color: rgba(255, 255, 255, 1);
-			font-weight: 200;
 			font-size: 2em;
 			line-height: 1em;
-			text-align: center;
-			margin: 0.5em 0;
+		}
+		h5, h6 {
+			color: yellow;
+			font-weight: 600;
+			padding: 5px 10px;
+		}
+		h5 {
+			font-size: 1.1em;
+			line-height: 1.2em;
+		}
+		h6 {
+			font-size: 1em;
+			line-height: 1.2em;
 		}
 		p {
 			padding: 5px 15px;
@@ -503,8 +515,8 @@ ul.dark {
 	vertical-align: top;
 	padding: 5px;
 }
-ul.dark li {
-	margin-left: 20px;
+li {
+	margin-left: 25px;
 }
 table ul {
 	background-color: transparent;
@@ -556,6 +568,9 @@ nav {
 }
 nav:hover {
   background-color: rgba(50, 50, 0, 1);
+}
+nav ul, nav li {
+	margin: 0;
 }
 nav ul:first-child {
 	font-weight: 600;
