--- a/css/main.css
+++ b/css/main.css
@@ -355,7 +355,7 @@ cursor: pointer;
 }			
 	
 .pad15 {
-	padding: 15px !important;
+	padding: 15px;
 }
 .roundLeft {
 	border-radius: 20px 0 0 20px;
