changing the cursor so it is clear that <details> lists can be expanded
Former-commit-id: 109801ff43614c672fc1c294cef5c1eeee083cf8 [formerly fd617c4a76c1c616c9d983d5072118f760da57d2]
Former-commit-id: 4b5f51ccd32f8be8f96748870ae05df46d597271

--- a/css/main.css
+++ b/css/main.css
@@ -382,6 +382,9 @@ cursor: pointer;
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
 ===============================================================================================================*/
+details {
+	cursor: pointer;
+}
 
 	h1, h2, h3, h4{
 			background-color: rgba(1, 1, 1, 0.7);
