changed details selector to a class
Former-commit-id: 81f3a2858fd91d93c7816601d014439bbca27bd1

--- a/css/main.css
+++ b/css/main.css
@@ -382,7 +382,7 @@ cursor: pointer;
 /*=============================================================================================================
 		 													ELEMENT ATTRIBUTES
 ===============================================================================================================*/
-details {
+.details {
 	cursor: pointer;
 }
 
